RESOLVED FIXED 244086
MediaStreamTrack.applyConstraints does not resolve when applying multiple constraints in parallel
https://bugs.webkit.org/show_bug.cgi?id=244086
Summary MediaStreamTrack.applyConstraints does not resolve when applying multiple con...
tim.spitzer
Reported 2022-08-18 06:41:02 PDT
MediaStreamTrack.applyContraints does not resolve properly when applying multiple constraints in parallel to a MediaStreamTrack on Safari 16. 1) Open the example at https://stackblitz.com/edit/js-gmbvkl?file=index.js 2) See console Actual results: The promises returned from applyConstraints get stuck in pending state, except for the last one which is rejected. Expected results: The promises returned should either be rejected or resolved based on the supported video resolution. The browser should enqueue and process the resolution changes in order as called in Javascript. Build Date & Hardware: Build 22-08-17 on Mac OS Version 13.0 Beta (22A5321d) Additional Builds and Platforms: Also not working on iOS 16 Beta Doesn't Occur on Safari 15, latest Firefox and Chrome, Mac OS Version 13.0 Beta (22A5321d)
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-18 06:51:27 PDT
youenn fablet
Comment 2 2022-08-18 08:04:22 PDT
EWS
Comment 3 2022-08-19 01:18:27 PDT
Committed 253588@main (340573c924b3): <https://commits.webkit.org/253588@main> Reviewed commits have been landed. Closing PR #3450 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.